<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:elevation="0dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <!--|snap-->

            <FrameLayout
                android:id="@+id/backdrop_fl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_300"
                android:fitsSystemWindows="true"
                android:foreground="@drawable/backdrop_scrim_dark"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/backdrop_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:contentInsetRight="16dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:behavior_overlapTop="156dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/movie_details_header_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/grey_400"
                    android:gravity="center"
                    android:paddingLeft="120dp"
                    android:orientation="vertical">

                    <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                        android:id="@+id/title_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:padding="16dp"
                        android:textColor="@color/primary_text_dark"
                        android:textSize="20sp"
                        app:textFont="lato_medium" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/movie_poster_iv"
                    android:layout_width="104dp"
                    android:layout_height="156dp"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/gradient_bg"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/transition_movie_thumbnail"
                    android:contentDescription="@string/movie_poster"/>

            </FrameLayout>

            <ProgressBar
                android:id="@+id/pb"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:indeterminate="true"/>

            <LinearLayout
                android:id="@+id/movie_details_body_ll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey_500"
                    android:padding="16dp">

                    <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                        android:id="@+id/rating_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/rating_bg"
                        android:textColor="@color/secondary_text_light"
                        android:textSize="14sp"
                        app:textFont="lato_black" />

                    <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                        android:id="@+id/genres_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignWithParentIfMissing="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:layout_toLeftOf="@+id/duration_tv"
                        android:layout_toRightOf="@id/rating_tv"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/secondary_text_light"
                        android:textSize="14sp"
                        app:textFont="lato_medium" />

                    <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                        android:id="@+id/duration_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/secondary_text_light"
                        android:textSize="14sp"
                        app:textFont="lato_medium" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey_100"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:textColor="@color/primary_text_dark"
                        android:textSize="18sp"
                        app:textFont="lato_medium" />

                    <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                        android:id="@+id/overview_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondary_text_dark"
                        android:textSize="16sp"
                        app:textFont="lato_medium" />

                    <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/status"
                        android:textColor="@color/primary_text_dark"
                        android:textSize="18sp"
                        app:textFont="lato_medium" />

                    <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                        android:id="@+id/status_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondary_text_dark"
                        android:textSize="16sp"
                        app:textFont="lato_medium" />

                    <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/release_date"
                        android:textColor="@color/primary_text_dark"
                        android:textSize="18sp"
                        app:textFont="lato_medium" />

                    <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                        android:id="@+id/release_date_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondary_text_dark"
                        android:textSize="16sp"
                        app:textFont="lato_medium" />

                    <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/budget"
                        android:textColor="@color/primary_text_dark"
                        android:textSize="18sp"
                        app:textFont="lato_medium" />

                    <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                        android:id="@+id/budget_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondary_text_dark"
                        android:textSize="16sp"
                        app:textFont="lato_medium" />

                    <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/revenue"
                        android:textColor="@color/primary_text_dark"
                        android:textSize="18sp"
                        app:textFont="lato_medium" />

                    <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                        android:id="@+id/revenue_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondary_text_dark"
                        android:textSize="16sp"
                        app:textFont="lato_medium" />

                </LinearLayout>

            </LinearLayout>

            <ViewStub
                android:id="@+id/cast_vs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout="@layout/cast_layout" />

            <ViewStub
                android:id="@+id/crew_vs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout="@layout/crew_layout" />

            <ViewStub
                android:id="@+id/similar_movies_vs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout="@layout/similar_movies_layout" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>